[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 128.0
margin_bottom = 152.0

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 128.0
margin_bottom = 20.0
text = "Play"

[node name="Tutorials" type="CheckButton" parent="MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 128.0
margin_bottom = 64.0
text = "Tutorial"

[node name="Sounds" type="CheckButton" parent="MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 128.0
margin_bottom = 108.0
pressed = true
text = "Sounds"

[node name="Music" type="CheckButton" parent="MarginContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 128.0
margin_bottom = 152.0
pressed = true
text = "Music"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Tutorials" to="." method="_on_Tutorials_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Sounds" to="." method="_on_Sounds_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Music" to="." method="_on_Music_toggled"]
